--- a/css/xssdevice-index.css
+++ b/css/xssdevice-index.css
@@ -1,47 +1,45 @@
 /* extra small devices - screen width less than 420px */
-@media screen and  (max-width: 400px) {
-    .container{
-       
-    }
-    .col {
-        max-width: calc(15% - 2px);
-        height: 60px;
-    }
-    .row.currentMonthRow{
-        justify-content: center;
-        align-items: center;
-        font-size: 1.5rem;
-    }
-    .lunarDate{
-        font-size: 0.5rem;
-        margin-top: 10%;
-        font-style: italic;
-        margin:0;
-    }
+@media screen and (max-width: 400px) {
+  .col {
+    max-width: 13.8% !important;
+    height: 50px;
+    font-size: 1rem;
+  }
+  .row.currentMonthRow {
+    font-size: 2rem;
+  }
+  .lunarDate {
+    font-size: 0.5rem;
+    margin-top: 10%;
+    font-style: italic;
+    margin: 0;
+  }
 
-    .row.currentMonthRow span{
-        margin: 0 10px;
-    }
+  .row.currentMonthRow span {
+    margin: 0 10px;
+  }
 
-    .statHolidayName{
-        font-size: 0.5rem;
-        margin-top: 0;
-        font-style: italic;
-    }
+  .statHolidayName {
+    font-size: 0.5rem;
+    margin-top: 0;
+    font-style: italic;
+  }
+  .row.header {
+    justify-content: flex-start !important;
+    margin: 0 auto;
+  }
 
-    .calendarBody{
-        margin: 0 auto;
-    }
+  .row.currentMonthRow {
+    margin: 0 auto;
+  }
 
-    .row.header{
-        margin: 0 auto;
-    }
+  .row {
+    justify-content: flex-start;
+    margin: 0 auto;
+  }
 
-    .row.currentMonthRow{
-        margin: 0 auto;
-    }
-    
-    .row{
-        margin: 0;
-    }
+  .container {
+    margin: 0 auto;
+    max-width: 100%;
+  }
 }
