--- a/index.css
+++ b/index.css
@@ -1,53 +1,51 @@
-@import './css/mddevice-index.css';
-@import './css/smdevice-index.css';
-@import './css/xsdevice-index.css';
-@import './css/xssdevice-index.css';
+/* @import "./css/mddevice-index.css";
+@import "./css/smdevice-index.css";
+@import "./css/xsdevice-index.css";
+@import "./css/xssdevice-index.css"; */
+@import "./css/xssdevice-index.css";
+@import "./css/xsdevice-index.css";
+@import "./css/smdevice-index.css";
+@import "./css/mddevice-index.css";
 
-html, body, .container {
-    height: 100%;
-    margin: 0 auto;
-    padding: 0;
+html,
+body,
+.container {
+  height: 100%;
+  margin: 0 auto;
+  padding: 0;
 }
-
-body{
-}
-
-.row{
-    justify-content: center;
-}
-
 .col {
-    height: 60px;
-    border: 1px solid lightgray;
+  border: 1px solid lightgray;
 }
 
 .row.header {
-    color: white;
+  color: white;
 }
 
 .calendarBody {
-    height: auto;
+  height: auto;
 }
 
-.calendarBody .col{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
+.calendarBody .col {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
-.row.header>div {
-    height: 100%;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.row.header > div {
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .today {
-    background-color: greenyellow;
+  background-color: greenyellow;
 }
 
-.lunarDate, .statHolidayName{
-    text-align: center;
+.lunarDate,
+.statHolidayName {
+  text-align: center;
 }
